@@ -53,9 +53,9 @@ public abstract class AbstractServiceFactory implements ServiceFactory {
       if (service == null && StringUtils.isNotBlank(implementation)) {
         // no known service implementation created, try to create the custom one
         try {
-          service = (Service) Class.forName(implementation).newInstance();
+          service = (Service) Class.forName(implementation).getDeclaredConstructor().newInstance();
           logServiceUsage(implementation, serviceType);
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException | java.lang.reflect.InvocationTargetException e) {
           throw new ServiceLifecycleException("Error while instantiating " + serviceType.getShortName() + " service implementation " + implementation, e);
         }
       }
